--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,22 +14,22 @@ dependencies:
   flutter:
     sdk: flutter
   nomo_ui_kit:
-      path: packages/nomo-ui-kit
+    path: packages/nomo-ui-kit
+  nomo_router:
+    path: packages/nomo-ui-kit/packages/nomo-router
+  route_gen:
+    path: packages/nomo-ui-kit/packages/nomo-router/route_gen
   google_fonts: ^6.1.0
   hooks_riverpod: ^2.3.5
   flutter_web_plugins:
     sdk: flutter
-
-
-  
   cupertino_icons: ^1.0.2
   js: ^0.6.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  
+  build_runner: ^2.4.7
   flutter_lints: ^3.0.1
 
 
