--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   js: ^0.6.7
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
