integrate webon-kit-dart

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,7 @@
 [submodule "packages/nomo-ui-kit"]
 	path = packages/nomo-ui-kit
 	url = https://github.com/nomo-app/nomo-ui-kit.git
-[submodule "walletkit-dart"]
-	path = walletkit-dart
-	url = https://github.com/nomo-app/walletkit-dart.git
-[submodule "packages/walletkit-dart"]
-	path = packages/walletkit-dart
-	url = https://github.com/nomo-app/walletkit-dart.git
+
+[submodule "packages/webon-kit-dart"]
+	path = packages/webon-kit-dart
+	url = https://github.com/nomo-app/webon-kit-dart.git
