--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
     path: packages/nomo-ui-kit/packages/nomo-router
   route_gen:
     path: packages/nomo-ui-kit/packages/nomo-router/route_gen
+  webon_kit_dart:
+        path: packages/webon-kit-dart
   google_fonts: ^6.1.0
   hooks_riverpod: ^2.3.5
   flutter_web_plugins:
