--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   js: ^0.6.7
   collection: ^1.18.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
