--- a/web/nomo_manifest.json
+++ b/web/nomo_manifest.json
@@ -1,9 +1,9 @@
 {
     "nomo_manifest_version": "1.2.0",
-    "webon_id": "app.nomo.swapwebonflutter",
-    "webon_name": "Swap Webon Flutter ",
+    "webon_id": "app.nomo.swapdefi",
+    "webon_name": "Swap DeFi",
     "webon_version": "0.2.11",
-    "min_nomo_version": "0.3.4",
+    "min_nomo_version": "0.3.5",
     "dependencies": [],
     "permissions": [
         "nomo.permission.CAMERA",
