add webonkit-dart submodule and adjust code to webonkit-dart

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 [submodule "packages/webon-kit-dart"]
 	path = packages/webon-kit-dart
 	url = https://github.com/nomo-app/webon-kit-dart.git
+
+[submodule "packages/walletkit-dart"]
+	path = packages/webon-kit-dart
+	url = https://github.com/nomo-app/walletkit-dart.git
