--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     path: packages/nomo-ui-kit/packages/nomo-router/route_gen
   webon_kit_dart:
         path: packages/webon-kit-dart
+  walletkit_dart:
+        path: packages/walletkit-dart
   google_fonts: ^6.1.0
   hooks_riverpod: ^2.3.5
   flutter_web_plugins:
