--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,13 @@
         {
             "name": "swapping_webon",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "args": [
+                "-d",
+                "chrome",
+                "--dart-define-from-file",
+                "env.json"
+            ]
         },
         {
             "name": "Flutter Web (port 3000)",
